--- a/contracts/package.json
+++ b/contracts/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "hardhat compile",
     "test": "npm run test:unit",
-    "test:unit": "hardhat test test/unit/*.spec.js",
+    "test:unit": "hardhat test test/unit/*.spec.js --network localFunctionsTestnet",
     "startLocalFunctionsTestnet": "node scripts/startLocalFunctionsTestnet.js",
     "listen": "nodemon scripts/listen.js",
     "lint": "npm run lint:contracts && npm run format:check",
