--- a/contracts/package.json
+++ b/contracts/package.json
@@ -39,6 +39,7 @@
     "hardhat-gas-reporter": "^1.0.9",
     "lint-staged": "^13.0.3",
     "nodemon": "^3.0.1",
+    "openzeppelin-contracts-4.3": "npm:@openzeppelin/contracts@^4.3.0",
     "ora": "5.4.1",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.24",
