--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.4.1",
+    "@tanstack/react-query": "^5.40.0",
     "@types/ms": "^0.7.32",
     "@types/node": "20.8.3",
     "@types/react": "18.2.25",
@@ -33,7 +34,8 @@
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2",
-    "viem": "2.x"
+    "viem": "~2.13.2",
+    "wagmi": "^2.9.8"
   },
   "devDependencies": {
     "prettier": "^3.2.5"
