functions config args and usage

--- a/contracts/.env.test
+++ b/contracts/.env.test
@@ -1,1 +1,3 @@
 PROVIDER_URL=http://localhost:8545/
+CHECKIN_ADDRESS=0x8dbe774843D361E1d1bB4A34A9DB1605F78DC2d3
+RENT_ADDRESS=0xef9fDC41236486FD497b0811FA197F8195bb1cB4
