--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
     "@prisma/client": "^5.4.1",
     "@tanstack/react-query": "^5.40.0",
     "@types/ms": "^0.7.32",
@@ -38,6 +39,13 @@
     "wagmi": "^2.9.8"
   },
   "devDependencies": {
-    "prettier": "^3.2.5"
+    "@wagmi/cli": "latest",
+    "bufferutil": "^4.0.7",
+    "encoding": "^0.1.13",
+    "lokijs": "^1.5.12",
+    "pino-pretty": "^10.2.0",
+    "prettier": "^3.2.5",
+    "supports-color": "^9.4.0",
+    "utf-8-validate": "^6.0.3"
   }
 }
