--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "@types/ms": "^0.7.32",
     "@types/node": "20.8.3",
     "@types/react": "18.2.25",
+    "react-icons": "^5.2.1",
     "@types/react-dom": "18.2.11",
     "@wagmi/connectors": "^5.0.7",
     "@wagmi/core": "^2.10.5",
