--- a/front/package.json
+++ b/front/package.json
@@ -20,19 +20,20 @@
     "@types/ms": "^0.7.32",
     "@types/node": "20.8.3",
     "@types/react": "18.2.25",
-    "react-icons": "^5.2.1",
     "@types/react-dom": "18.2.11",
     "@wagmi/connectors": "^5.0.7",
     "@wagmi/core": "^2.10.5",
     "autoprefixer": "10.4.16",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
+    "ethers": "6.10.0",
     "ms": "^2.1.3",
     "next": "13.5.4",
     "postcss": "8.4.31",
     "prisma": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.2.1",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2",
